test/errors/e61.gm
Procedure test_map_element_access(G:Graph)
{
	N_S index;
	Map<Int, Long> map;
	Long x = map[index]; //type mismatch
}
